# OOP_Bystrov

./: README.md  note.ipynb
exam/: README.md  agent.py  pyproject.toml
init/: README.md
lab5/: 5.1.py  5.2.py  5.3.py  5.4.py  README.md
lab6/: README.md  env_test.py  req.py
lab7/: README.md
lab8/: README.md  _config.yml
lab_1/: README.md  first_program.py
lab_2/: README.md  Second_lab.py  note.ipynb
lab_3/: README.md  main.py  note.ipynb
lab_4/: task.ipynb
lab_4 /: README.md
