[project]
name = "exam-variant-4"
version = "0.1.0"
description = ""
authors = [
    {name = "Vadym",email = "vrekunov2023@itcollege.lviv.ua"}
]
requires-python = ">=3.13"
dependencies = [
    "google-adk (>=2.1.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
